------------------------------------------------------------------------------
Changes for CVS:

Those commits remove the whole "glue/callback" logic. Instead functions are just
defined as external, and should be implemented (even as dummy) by all programs.
Affected files:
 common/arch.c button.c glue.c init.c item.c living.c logger.c los.c map.c object.c
  time.c treasure.c
 include/funcpoint.h libproto.h sproto.h
 random_maps/standalone.c: add dummy functions for those externals.
 server/init.c: remove obsolete setup_library()

Added a wrapper function for check_trigger from plugins.
 include/plugin.h: new function
 server/plugins.c: wrapper for check_trigger.

Ryo 2005-07-15

plugin/plugin_python.c: (add|free)_string should *not* be called directly under Win32.
 Therefore let's use the hooks. Also, when removing an object, better check it's not the
 current object (CFPython.RemoveObject(CFPython.WhoAmI()) anyone?).
Ryo 2005-07-15

server/spell_util.c: use on_same_map instead of checking directly map pointers.
Ryo 2005-07-15

Those changes implement a quest tracking system. Check the doc/quests document for more info.
common/quest.c: new file with a few quests-related functions.
doc/Developers/mapguide: point to quests file for instructions on quests.
doc/Developers/quests: new file with instructions on how to use quests,
 and implementation details.
doc/Developers/README: added quests file.
include/libproto.h: new functions in quest.c.
include/quest.h: new file with a few defines for quests.
include/sproto.h: new function command_quest, update talk_to_wall definition.
lib/help/quests: new help file for quests command.
server/c_misc: new command_quests function.
server/commands.c: link command_quests to "quests".
server/monster.c: update talk_to_wall and talk_to_npc to check for quests.
server/time.c: modify marker behaviour to handle quests.
Ryo 2005-07-14

common/{button.c, treasure.c, utils.c}, server/{c_wiz.c, login.c, shop.c,