@@ -37,6 +37,7 @@ crossedit_SOURCES = \
 	Bitmaps.c \
 	Str.c \
 	xutil.c \
+    stubs.c \
 	CrFace.h \
 	CrFaceP.h \
 	CrEdit.h \
